# RC-Car-mit-Kamera

./: Anschlussplan.xlsx  README.md
Code/: pico_video.py  read me  readme.md
Code/RC_Car_Code/: CMakeLists.txt  cgi.h  htmldata.c  main.c
Pläne/: Anschlussplan.xlsx
